// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Root Wrapper File default 1`] = `
.c0 .title {
  font-size: 14px;
}

.c0 .file-type-icon span {
  width: 16px !important;
  height: 16px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File with appeareance 1`] = `
.c0 .title {
  font-size: 14px;
}

.c0 .file-type-icon span {
  width: 16px !important;
  height: 16px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File with appeareance 2`] = `
.c0 {
  display: inline-block;
  min-width: 200px;
  height: 42px;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File with appeareance 3`] = `
.c0 .title {
  font-size: 14px;
}

.c0 .file-type-icon span {
  width: 16px !important;
  height: 16px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File with appeareance 4`] = `
.c0 .title {
  font-size: 14px;
}

.c0 .file-type-icon span {
  width: 16px !important;
  height: 16px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File with appeareance 5`] = `
.c0 .title {
  font-size: 14px;
}

.c0 .file-type-icon span {
  width: 16px !important;
  height: 16px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File with breakpoint 1`] = `
.c0 .title {
  font-size: 12px;
}

.c0 .file-type-icon span {
  width: 14px !important;
  height: 14px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File with breakpoint 2`] = `
.c0 .title {
  font-size: 14px;
}

.c0 .file-type-icon span {
  width: 16px !important;
  height: 16px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File with breakpoint 3`] = `
.c0 .overlay {
  padding: 24px;
}

.c0 .title {
  font-size: 14px;
}

.c0 .file-size {
  font-size: 14px;
}

.c0 .file-type-icon span {
  width: 18px !important;
  height: 18px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File with breakpoint 4`] = `
.c0 {
  border-radius: 2px;
}

.c0 .title {
  font-size: 16px;
}

.c0 .file-size {
  font-size: 14px;
}

.c0 .wrapper,
.c0 .img-wrapper {
  border-radius: 2px;
}

.c0 .overlay {
  padding: 24px;
}

.c0 .file-type-icon span {
  width: 18px !important;
  height: 18px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File with dimensions 1`] = `
.c0 {
  height: 300px;
  width: 400px;
}

.c0 .title {
  font-size: 14px;
}

.c0 .file-type-icon span {
  width: 16px !important;
  height: 16px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File with dimensions 2`] = `
.c0 {
  display: inline-block;
  min-width: 200px;
  width: 400px;
  height: 42px;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File with dimensions 3`] = `
.c0 {
  height: 300px;
  width: 400px;
}

.c0 .title {
  font-size: 14px;
}

.c0 .file-type-icon span {
  width: 16px !important;
  height: 16px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper Link default 1`] = `
.c0 {
  min-width: 0px;
  max-width: 400px;
  position: relative;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper Link with appeareance 1`] = `
.c0 {
  min-width: 0px;
  max-width: 400px;
  position: relative;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper Link with appeareance 2`] = `
.c0 {
  display: inline-block;
  min-width: 200px;
  height: 42px;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper Link with appeareance 3`] = `
.c0 {
  min-width: 144px;
  max-width: 480px;
  position: relative;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper Link with appeareance 4`] = `
.c0 {
  min-width: 272px;
  max-width: 400px;
  position: relative;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper Link with appeareance 5`] = `
.c0 {
  min-width: 400px;
  max-width: 400px;
  height: 125px;
  position: relative;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper Link with dimensions 1`] = `
.c0 {
  min-width: 0px;
  max-width: 400px;
  position: relative;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper Link with dimensions 2`] = `
.c0 {
  display: inline-block;
  min-width: 200px;
  width: 400px;
  height: 42px;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper Link with dimensions 3`] = `
.c0 {
  min-width: 0px;
  max-width: 400px;
  position: relative;
}

<div
  className="c0"
/>
`;
